<resources>
    <string name="app_name">UberRiderJava</string>
    <string name="sign_in_with_phone">Sign in with phone</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="register_text">Let\'s start with creating your account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="continue_text">Continue</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="menu_sign_out">Sign out</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_permission_required">Location permission is required</string>
    <string name="drivers_not_found">Drivers not found!</string>
    <string name="driver_with_key_not_found">Not found driver with key</string>

</resources>