<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/register_text"
                android:textSize="22sp"
                android:fontFamily="@font/uber_move"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/edt_first_name"
                        android:hint="@string/first_name"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/edt_last_name"
                        android:hint="@string/last_name"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/edt_phone_number"
                    android:hint="@string/phone_number"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


    </LinearLayout>

    <Button

        android:layout_margin="25dp"
        android:layout_alignParentBottom="true"
        android:text="@string/continue_text"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>